fixed z-index video

--- a/src/app/containers/Ataraxia/containers/Main/main.css
+++ b/src/app/containers/Ataraxia/containers/Main/main.css
@@ -26,19 +26,19 @@
         min-width: 100%;
         -webkit-transform: translateX(-50%) translateY(-50%);
         transform: translateX(-50%) translateY(-50%);
+        display: none;
+        @media (min-width: 769px){
+            display: block;
+        } 
     }
     img {
         margin-top: 50px;
     }
     .icon {
         width: 60px;
-        z-index: 2;
         &:hover {
             opacity: 0.7;
-        }
-        @media (min-width: 769px){
-            display: none;
-        }            
+        } 
     }
 }
 
